--- a/LeNet-5/lenet5.ipynb
+++ b/LeNet-5/lenet5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lenet5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP27XX+yI3hGumiq+WI3cQ0",
+      "authorship_tag": "ABX9TyPjLR1fr0Ef/vMQ6eagNP8D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,20 +26,20 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shazzad-hasan/Training-Reproducable-Deep-Learning-Models/blob/main/LeNet-5/lenet5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shazzad-hasan/training-reproducable-deep-learning-models/blob/main/LeNet-5/lenet5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/shazzad-hasan/Training-Reproducable-Deep-Learning-Models.git"
+        "!git clone https://github.com/shazzad-hasan/training-reproducable-deep-learning-models.git"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OJCVUQcLMxGv",
-        "outputId": "cd3818ab-5b71-4a7e-da25-e45f8aa24cfd"
+        "outputId": "b2a204c1-79e1-4339-cb73-3fd4b8d667d3"
       },
       "execution_count": 1,
       "outputs": [
@@ -47,12 +47,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'Training-Reproducable-Deep-Learning-Models'...\n",
-            "remote: Enumerating objects: 13, done.\u001b[K\n",
-            "remote: Counting objects: 100% (13/13), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (11/11), done.\u001b[K\n",
-            "remote: Total 13 (delta 2), reused 4 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (13/13), done.\n"
+            "Cloning into 'training-reproducable-deep-learning-models'...\n",
+            "remote: Enumerating objects: 17, done.\u001b[K\n",
+            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Total 17 (delta 3), reused 4 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (17/17), done.\n"
           ]
         }
       ]
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GpeCttDQOCEM",
-        "outputId": "73c24f51-0f6a-4ccc-a590-6d7d7cfbb3d6"
+        "outputId": "997c851f-68b9-4b72-9df4-bb40fe743a18"
       },
       "execution_count": 2,
       "outputs": [
@@ -84,29 +84,29 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd /content/Training-Reproducable-Deep-Learning-Models/LeNet-5"
+        "%cd /content/training-reproducable-deep-learning-models/LeNet-5"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CBxCXyu1OJxv",
-        "outputId": "df40b387-3e22-4fb1-9ff8-4a36c2278c9e"
+        "outputId": "2bc27128-6031-4519-93fe-e7d3e1537ac6"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/Training-Reproducable-Deep-Learning-Models/LeNet-5\n"
+            "/content/training-reproducable-deep-learning-models/LeNet-5\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "id": "c3BhppgxLNwx"
       },
@@ -124,14 +124,15 @@
       "cell_type": "code",
       "source": [
         "# import local helper functions\n",
+        "from helper_dataset import data_loaders_mnist\n",
         "from helper_train import train\n",
         "from helper_evaluate import compute_loss_accuracy\n",
-        "from helper_plot import show_sample_test_result"
+        "from helper_plot import show_examples, show_sample_test_result"
       ],
       "metadata": {
         "id": "BcCabuWGLgM0"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -155,9 +156,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cOrxjDC9OzMM",
-        "outputId": "39bc8df0-8064-43ac-a833-4a05251f8d3a"
+        "outputId": "f3a1af6f-121f-4fbd-a308-9e9d211e108d"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,10 +172,24 @@
     {
       "cell_type": "code",
       "source": [
+        "# settings\n",
+        "random_seed = 123\n",
+        "batch_size = 32\n",
+        "num_epochs = 20"
+      ],
+      "metadata": {
+        "id": "WMwkMTjhtzcl"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "Ospsl_-HOzPO"
+        "id": "ggXBhcju1M7J"
       },
       "execution_count": null,
       "outputs": []
