--- a/LeNet-5/lenet5.ipynb
+++ b/LeNet-5/lenet5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lenet5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjLR1fr0Ef/vMQ6eagNP8D",
+      "authorship_tag": "ABX9TyOqDw1R73FGarqeYUxxihra",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OJCVUQcLMxGv",
-        "outputId": "b2a204c1-79e1-4339-cb73-3fd4b8d667d3"
+        "outputId": "9cc49a1a-abe4-4bea-84e3-c555b25ada4e"
       },
       "execution_count": 1,
       "outputs": [
@@ -48,11 +48,11 @@
           "name": "stdout",
           "text": [
             "Cloning into 'training-reproducable-deep-learning-models'...\n",
-            "remote: Enumerating objects: 17, done.\u001b[K\n",
-            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Total 17 (delta 3), reused 4 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (17/17), done.\n"
+            "remote: Enumerating objects: 40, done.\u001b[K\n",
+            "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
+            "remote: Total 40 (delta 12), reused 26 (delta 8), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (40/40), done.\n"
           ]
         }
       ]
@@ -68,7 +68,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GpeCttDQOCEM",
-        "outputId": "997c851f-68b9-4b72-9df4-bb40fe743a18"
+        "outputId": "1cc758f3-b72c-4f3a-e149-d13db41a1e01"
       },
       "execution_count": 2,
       "outputs": [
@@ -91,15 +91,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CBxCXyu1OJxv",
-        "outputId": "2bc27128-6031-4519-93fe-e7d3e1537ac6"
+        "outputId": "5ee6ca96-249c-4c2f-e950-ae058bc417af"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/training-reproducable-deep-learning-models/LeNet-5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "VDg8_ERjQZPe",
+        "outputId": "56b2d746-24df-4a3f-8543-ada276949018",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "helper_dataset.py   helper_plot.py   lenet5.ipynb\n",
+            "helper_evaluate.py  helper_train.py  __pycache__\n"
           ]
         }
       ]
@@ -124,15 +148,15 @@
       "cell_type": "code",
       "source": [
         "# import local helper functions\n",
-        "from helper_dataset import data_loaders_mnist\n",
+        "from helper_dataset import dataloader_mnist\n",
         "from helper_train import train\n",
-        "from helper_evaluate import compute_loss_accuracy\n",
+        "from helper_evaluate import compute_loss_accuracy, set_all_seeds\n",
         "from helper_plot import show_examples, show_sample_test_result"
       ],
       "metadata": {
         "id": "BcCabuWGLgM0"
       },
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -156,9 +180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cOrxjDC9OzMM",
-        "outputId": "f3a1af6f-121f-4fbd-a308-9e9d211e108d"
+        "outputId": "82d2826b-ced7-42a5-af0e-5379beca4c50"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,13 +198,183 @@
       "source": [
         "# settings\n",
         "random_seed = 123\n",
+        "valid_size = 0.2\n",
         "batch_size = 32\n",
-        "num_epochs = 20"
+        "num_epochs = 20\n",
+        "\n",
+        "set_all_seeds(random_seed)"
       ],
       "metadata": {
         "id": "WMwkMTjhtzcl"
       },
-      "execution_count": 11,
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import transforms\n",
+        "\n",
+        "data_transform  = transforms.Compose([transforms.Resize((32, 32)),\n",
+        "                                      transforms.ToTensor(),\n",
+        "                                      transforms.Normalize((0.5,),(0.5,))]\n",
+        "    \n",
+        ")\n",
+        "\n",
+        "train_loader, valid_loader, test_loader, classes = dataloader_mnist(\n",
+        "    batch_size = batch_size, \n",
+        "    train_transform = data_transform,\n",
+        "    test_transform = data_transform,\n",
+        "    valid_size = valid_size\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "ggXBhcju1M7J"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classes)\n",
+        "num_class = len(classes)"
+      ],
+      "metadata": {
+        "id": "QdPny5QtkrL6",
+        "outputId": "4f8dbd6e-f2cd-4be2-9675-dc13cad32591",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['0 - zero', '1 - one', '2 - two', '3 - three', '4 - four', '5 - five', '6 - six', '7 - seven', '8 - eight', '9 - nine']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking the dataset\n",
+        "for images, labels in train_loader:  \n",
+        "    print('Image batch dimensions:', images.shape)\n",
+        "    print('Image label dimensions:', labels.shape)\n",
+        "    print('Class labels of 10 examples:', labels[:10])\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "smVY0bKXgttH",
+        "outputId": "222f7213-8fb5-4339-db27-c4e918511e98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Image batch dimensions: torch.Size([32, 1, 32, 32])\n",
+            "Image label dimensions: torch.Size([32])\n",
+            "Class labels of 10 examples: tensor([8, 5, 7, 5, 7, 7, 7, 2, 6, 4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "\n",
+        "class LeNet5(nn.Module):\n",
+        "\n",
+        "    def __init__(self, num_classes, grayscale=False):\n",
+        "        super().__init__()\n",
+        "        \n",
+        "        self.grayscale = grayscale\n",
+        "        self.num_classes = num_classes\n",
+        "\n",
+        "        in_channels = 1 if self.grayscale else 3\n",
+        "\n",
+        "        self.features = torch.nn.Sequential(\n",
+        "            nn.Conv2d(in_channels, 6, 5),\n",
+        "            nn.Tanh(),\n",
+        "            nn.MaxPool2d(2),\n",
+        "            nn.Conv2d(6, 16, 5),\n",
+        "            nn.Tanh(),\n",
+        "            nn.MaxPool2d(2)\n",
+        "        )\n",
+        "\n",
+        "        self.classifier = torch.nn.Sequential(\n",
+        "            nn.Linear(16*5*5, 120),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(120, 84),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(84, num_classes),\n",
+        "        )\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.features(x)\n",
+        "        x = torch.flatten(x, 1)\n",
+        "        logits = self.classifier(x)\n",
+        "        return logits\n",
+        "\n",
+        "model = LeNet5(num_classes=10, grayscale=True)\n",
+        "# move model to the right device\n",
+        "model.to(device)\n",
+        "\n",
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "wrqVVpFllZsL",
+        "outputId": "b540f5f9-eea5-47a1-d712-2be17b273446",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LeNet5(\n",
+            "  (features): Sequential(\n",
+            "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
+            "    (1): Tanh()\n",
+            "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
+            "    (4): Tanh()\n",
+            "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  )\n",
+            "  (classifier): Sequential(\n",
+            "    (0): Linear(in_features=400, out_features=120, bias=True)\n",
+            "    (1): Tanh()\n",
+            "    (2): Linear(in_features=120, out_features=84, bias=True)\n",
+            "    (3): Tanh()\n",
+            "    (4): Linear(in_features=84, out_features=10, bias=True)\n",
+            "  )\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "MRISgjmWlZv4"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +383,7 @@
         ""
       ],
       "metadata": {
-        "id": "ggXBhcju1M7J"
+        "id": "7vU_ZbFKlZ1W"
       },
       "execution_count": null,
       "outputs": []
