--- a/LeNet-5/lenet5.ipynb
+++ b/LeNet-5/lenet5.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "lenet5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqDw1R73FGarqeYUxxihra",
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyNDhHH17glGRzbzncSALLZQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,27 +36,10 @@
         "!git clone https://github.com/shazzad-hasan/training-reproducable-deep-learning-models.git"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OJCVUQcLMxGv",
-        "outputId": "9cc49a1a-abe4-4bea-84e3-c555b25ada4e"
+        "id": "OJCVUQcLMxGv"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'training-reproducable-deep-learning-models'...\n",
-            "remote: Enumerating objects: 40, done.\u001b[K\n",
-            "remote: Counting objects: 100% (40/40), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Total 40 (delta 12), reused 26 (delta 8), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (40/40), done.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -64,22 +48,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GpeCttDQOCEM",
-        "outputId": "1cc758f3-b72c-4f3a-e149-d13db41a1e01"
+        "id": "GpeCttDQOCEM"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -87,22 +59,10 @@
         "%cd /content/training-reproducable-deep-learning-models/LeNet-5"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CBxCXyu1OJxv",
-        "outputId": "5ee6ca96-249c-4c2f-e950-ae058bc417af"
+        "id": "CBxCXyu1OJxv"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/training-reproducable-deep-learning-models/LeNet-5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -110,27 +70,14 @@
         "!ls"
       ],
       "metadata": {
-        "id": "VDg8_ERjQZPe",
-        "outputId": "56b2d746-24df-4a3f-8543-ada276949018",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "VDg8_ERjQZPe"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "helper_dataset.py   helper_plot.py   lenet5.ipynb\n",
-            "helper_evaluate.py  helper_train.py  __pycache__\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "c3BhppgxLNwx"
       },
@@ -156,7 +103,7 @@
       "metadata": {
         "id": "BcCabuWGLgM0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,22 +123,10 @@
         "  device = torch.device('cpu')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cOrxjDC9OzMM",
-        "outputId": "82d2826b-ced7-42a5-af0e-5379beca4c50"
+        "id": "cOrxjDC9OzMM"
       },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CUDA is available!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -207,7 +142,7 @@
       "metadata": {
         "id": "WMwkMTjhtzcl"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +166,7 @@
       "metadata": {
         "id": "ggXBhcju1M7J"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,22 +176,10 @@
         "num_class = len(classes)"
       ],
       "metadata": {
-        "id": "QdPny5QtkrL6",
-        "outputId": "4f8dbd6e-f2cd-4be2-9675-dc13cad32591",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "QdPny5QtkrL6"
       },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['0 - zero', '1 - one', '2 - two', '3 - three', '4 - four', '5 - five', '6 - six', '7 - seven', '8 - eight', '9 - nine']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -269,24 +192,10 @@
         "    break"
       ],
       "metadata": {
-        "id": "smVY0bKXgttH",
-        "outputId": "222f7213-8fb5-4339-db27-c4e918511e98",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "smVY0bKXgttH"
       },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Image batch dimensions: torch.Size([32, 1, 32, 32])\n",
-            "Image label dimensions: torch.Size([32])\n",
-            "Class labels of 10 examples: tensor([8, 5, 7, 5, 7, 7, 7, 2, 6, 4])\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -303,23 +212,18 @@
         "\n",
         "        in_channels = 1 if self.grayscale else 3\n",
         "\n",
-        "        self.features = torch.nn.Sequential(\n",
-        "            nn.Conv2d(in_channels, 6, 5),\n",
-        "            nn.Tanh(),\n",
-        "            nn.MaxPool2d(2),\n",
-        "            nn.Conv2d(6, 16, 5),\n",
-        "            nn.Tanh(),\n",
-        "            nn.MaxPool2d(2)\n",
-        "        )\n",
+        "        self.features = torch.nn.Sequential(nn.Conv2d(in_channels, 6, 5),\n",
+        "                                            nn.Tanh(),\n",
+        "                                            nn.MaxPool2d(2),\n",
+        "                                            nn.Conv2d(6, 16, 5),\n",
+        "                                            nn.Tanh(),\n",
+        "                                            nn.MaxPool2d(2))\n",
         "\n",
-        "        self.classifier = torch.nn.Sequential(\n",
-        "            nn.Linear(16*5*5, 120),\n",
-        "            nn.Tanh(),\n",
-        "            nn.Linear(120, 84),\n",
-        "            nn.Tanh(),\n",
-        "            nn.Linear(84, num_classes),\n",
-        "        )\n",
-        "\n",
+        "        self.classifier = torch.nn.Sequential(nn.Linear(16*5*5, 120),\n",
+        "                                              nn.Tanh(),\n",
+        "                                              nn.Linear(120, 84),\n",
+        "                                              nn.Tanh(),\n",
+        "                                              nn.Linear(84, num_classes))\n",
         "    def forward(self, x):\n",
         "        x = self.features(x)\n",
         "        x = torch.flatten(x, 1)\n",
@@ -333,43 +237,23 @@
         "print(model)"
       ],
       "metadata": {
-        "id": "wrqVVpFllZsL",
-        "outputId": "b540f5f9-eea5-47a1-d712-2be17b273446",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "wrqVVpFllZsL"
       },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "LeNet5(\n",
-            "  (features): Sequential(\n",
-            "    (0): Conv2d(1, 6, kernel_size=(5, 5), stride=(1, 1))\n",
-            "    (1): Tanh()\n",
-            "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-            "    (3): Conv2d(6, 16, kernel_size=(5, 5), stride=(1, 1))\n",
-            "    (4): Tanh()\n",
-            "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-            "  )\n",
-            "  (classifier): Sequential(\n",
-            "    (0): Linear(in_features=400, out_features=120, bias=True)\n",
-            "    (1): Tanh()\n",
-            "    (2): Linear(in_features=120, out_features=84, bias=True)\n",
-            "    (3): Tanh()\n",
-            "    (4): Linear(in_features=84, out_features=10, bias=True)\n",
-            "  )\n",
-            ")\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import torch.optim as optim\n",
+        "\n",
+        "# specify loss\n",
+        "criterion = nn.CrossEntropyLoss() # categorical cross-entropy loss\n",
+        "\n",
+        "params = model.parameters()\n",
+        "optimizer = optim.SGD(params, lr=0.01)\n",
+        "\n",
+        "lr_scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, factor=0.1, mode=\"min\")"
       ],
       "metadata": {
         "id": "MRISgjmWlZv4"
@@ -380,10 +264,22 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "train_losses, valid_losses = train(model, num_epochs, train_loader, valid_loader,\n",
+        "                                   test_loader, optimizer, criterion, device) "
       ],
       "metadata": {
         "id": "7vU_ZbFKlZ1W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "baJJ8z7WAvbj"
       },
       "execution_count": null,
       "outputs": []
