--- a/AlexNet/alexnet_cifar10.ipynb
+++ b/AlexNet/alexnet_cifar10.ipynb
@@ -6,7 +6,7 @@
       "name": "alexnet_cifar10.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyM1aQTu/GsC4EjKK/7R1W8I",
+      "authorship_tag": "ABX9TyONr+t/9bX/Z1SRvMJlcsUq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,29 +32,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e9mzWvOq_Bfe",
-        "outputId": "0bba9336-3091-42a0-de18-4ef1c7296206"
+        "id": "e9mzWvOq_Bfe"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'training-reproducable-deep-learning-models'...\n",
-            "remote: Enumerating objects: 126, done.\u001b[K\n",
-            "remote: Counting objects: 100% (126/126), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (98/98), done.\u001b[K\n",
-            "remote: Total 126 (delta 51), reused 73 (delta 26), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (126/126), 30.96 KiB | 905.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (51/51), done.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!git clone https://github.com/shazzad-hasan/training-reproducable-deep-learning-models.git"
       ]
@@ -66,22 +48,10 @@
         "drive.mount(\"/content/drive\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vy9O6ow0Fi-a",
-        "outputId": "320683a7-887f-4c19-a383-393c17f7d0f2"
+        "id": "vy9O6ow0Fi-a"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -89,22 +59,10 @@
         "%cd /content/training-reproducable-deep-learning-models/AlexNet"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "x9ISmVd7FnuW",
-        "outputId": "0bba91b3-dfdb-46b7-daf9-bb96b0e4376c"
+        "id": "x9ISmVd7FnuW"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/training-reproducable-deep-learning-models/AlexNet\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -112,22 +70,10 @@
         "!ls"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QBrnuHJ1Fnxa",
-        "outputId": "4f66b2ad-9e5c-4dcd-8e78-46d02d2f3612"
+        "id": "QBrnuHJ1Fnxa"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "helper_dataset.py  helper_evaluate.py  helper_plot.py  helper_train.py\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -142,16 +88,244 @@
       "metadata": {
         "id": "L0TdsLhmFn0N"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# import local helper functions\n"
+        "# import local helper functions\n",
+        "from helper_dataset import dataloader_cifar10\n",
+        "from helper_train import train\n",
+        "from helper_evaluate import compute_loss_accuracy, set_all_seeds\n",
+        "from helper_plot import show_examples, plot_results, show_sample_test_result"
       ],
       "metadata": {
         "id": "iEqgqcyyFn3V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check if cuda is available\n",
+        "train_on_gpu = torch.cuda.is_available()\n",
+        "\n",
+        "if train_on_gpu:\n",
+        "  print(\"CUDA is available!\")\n",
+        "else:\n",
+        "  print(\"CUDA is not available\")\n",
+        "\n",
+        "device = torch.device('cuda') if train_on_gpu else torch.device('cpu')"
+      ],
+      "metadata": {
+        "id": "piA3auUILFt-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# settings\n",
+        "random_seed = 123\n",
+        "valid_size = 0.2\n",
+        "batch_size = 32\n",
+        "num_epochs = 5\n",
+        "\n",
+        "set_all_seeds(random_seed)"
+      ],
+      "metadata": {
+        "id": "pe3Thh9LLQuP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from torchvision import datasets\n",
+        "import torchvision.transforms as transforms\n",
+        "from torch.utils.data.sampler import SubsetRandomSampler\n",
+        "\n",
+        "train_transforms = torchvision.transforms.Compose([\n",
+        "    transforms.Resize((244, 244)),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+        "                                      ])\n",
+        "\n",
+        "test_transforms = torchvision.transforms.Compose([\n",
+        "    transforms.Resize((244, 244)),        \n",
+        "    transforms.ToTensor(),                \n",
+        "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))])\n",
+        "\n",
+        "train_loader, valid_loader, test_loader, classes = dataloader_cifar10(\n",
+        "    batch_size = batch_size, \n",
+        "    train_transform = train_transforms,\n",
+        "    test_transform = test_transforms,\n",
+        "    valid_size = valid_size\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "Wnc2aljnLS7M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classes)\n",
+        "num_classes = len(classes)"
+      ],
+      "metadata": {
+        "id": "myzRDwaSqBTj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# print out some data statistics\n",
+        "for images, labels in train_loader:  \n",
+        "    print('Image batch dimensions:', images.shape)\n",
+        "    print('Image label dimensions:', labels.shape)\n",
+        "    print('Class labels of 10 examples:', labels[:10])\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "O1EdCYUZqBW3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "\n",
+        "class AlexNet(nn.Module):\n",
+        "  def __init__(self, num_classes): \n",
+        "        super().__init__()\n",
+        "        self.features = nn.Sequential(\n",
+        "            nn.Conv2d(3, 64, kernel_size=11, stride=4, padding=2),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "            nn.Conv2d(64, 192, kernel_size=5, padding=2),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "            nn.Conv2d(192, 384, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(384, 256, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Conv2d(256, 256, kernel_size=3, padding=1),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.MaxPool2d(kernel_size=3, stride=2),\n",
+        "        )\n",
+        "        self.avgpool = nn.AdaptiveAvgPool2d((6, 6))\n",
+        "\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(256 * 6 * 6, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Dropout(0.5),\n",
+        "            nn.Linear(4096, 4096),\n",
+        "            nn.ReLU(inplace=True),\n",
+        "            nn.Linear(4096, num_classes)\n",
+        "        )\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    x = self.features(x)\n",
+        "    x = self.avgpool(x)\n",
+        "    x = x.view(x.size(0), 256 * 6 * 6)\n",
+        "    logits = self.classifier(x)\n",
+        "    return logits\n",
+        "\n",
+        "model = AlexNet(num_classes=10)\n",
+        "model.to(device)\n",
+        "\n",
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "vzZErhutqBZ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.optim as optim\n",
+        "\n",
+        "criterion = nn.CrossEntropyLoss() \n",
+        "params = model.parameters()\n",
+        "optimizer = optim.SGD(params, lr=0.01, momentum=0.9)\n",
+        "\n",
+        "lr_scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, factor=0.1, mode=\"min\")"
+      ],
+      "metadata": {
+        "id": "drTOY2h7qBc6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_loss_list, valid_loss_list, train_acc_list, valid_acc_list = train(model, num_epochs, \n",
+        "                                                                         train_loader, valid_loader,\n",
+        "                                                                         test_loader, optimizer, \n",
+        "                                                                         criterion, device)"
+      ],
+      "metadata": {
+        "id": "WlljdeWRsIp2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plot_results(train_loss_list, valid_loss_list, train_acc_list, valid_acc_list, num_epochs)"
+      ],
+      "metadata": {
+        "id": "0fuepa6DsOJF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# load model with the lowest validation loss\n",
+        "model.load_state_dict(torch.load('model.pt'))"
+      ],
+      "metadata": {
+        "id": "1cxZtg5bsQ0B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_loss, test_acc = compute_loss_accuracy(model, test_loader, criterion, num_classes, classes, device)"
+      ],
+      "metadata": {
+        "id": "pKqvLrnZsQ3F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "show_sample_test_result(test_loader, model, classes, train_on_gpu, device)"
+      ],
+      "metadata": {
+        "id": "5BrMmPnisQ6p"
       },
       "execution_count": null,
       "outputs": []
